Fix: tab-content overflow

--- a/sass/blocks/index/_install.sass
+++ b/sass/blocks/index/_install.sass
@@ -122,7 +122,6 @@
   font-size: 16px
   line-height: 20px
   color: $light
-  overflow: auto
   &__item
     display: none
     &--active
